# incheoncc

./: .gitignore  README.md  Untitled.ipynb  conftest.py  custom_logger.py  error_리스트화면신청있지만선점된경우.html  holidays.json  holidays.py  main.py  moniter.py  pick_datetime_model.py  pick_datetime_view.py  pick_datetime_view_model.py  pyproject.toml  reservation.py  scheduler.py  scraper.py  test-macro-direct.ipynb  test_decode.py  user_agent.py  user_agent_list.txt  교육용 완료 DOM API 방식.ipynb  교육용 완료 session-post.ipynb
e2e/: test_uc01_dom_instant.py  test_uc02_dom_schedule.py  test_uc03_session_instant.py  test_uc04_session_schedule.py
integration/: test_monitor.py
utils/: __init__.py
