[project]
name = "golf-booking-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "notebook>=7.4.2",
    "pyside6>=6.9.0",
    "pytest>=8.4.1",
    "selenium>=4.32.0",
    "webdriver-manager>=4.0.2",
]
