[project]
name = "golf-booking-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "arrow>=1.3.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.2",
    "jupyterlab-lsp>=5.1.1",
    "lckr-jupyterlab-variableinspector>=3.2.4",
    "loguru>=0.7.3",
    "notebook>=7.4.2",
    "pyinstaller>=6.14.1",
    "pyside6>=6.9.0",
    "pytest>=8.4.1",
    "selenium>=4.32.0",
    "webdriver-manager>=4.0.2",
]
